# demo-kafka-pydantic

./: .gitignore  README.md  pyproject.toml
src/kafka_ex1/: model_consumer.py  model_producer.py  simple_consumer.py  simple_producer.py
src/kafka_ex2/: model_consumer.py  model_producer.py  simple_consumer.py  simple_producer.py
src/kafka_ex3/: model_consumer.py  model_producer.py  simple_consumer.py  simple_producer.py
